--- a/Assets/scss/_contenido-shoes.scss
+++ b/Assets/scss/_contenido-shoes.scss
@@ -1,11 +1,9 @@
 .card-title{
-    font-family: 'source code pro' , 'Tangerine' , monospace;
+    font-family: $TipografiaSecundaria;
     font-weight: 900px;
-
-
 }
 .card-text{
-    font-family: 'source code pro' , 'Tangerine' , monospace;
+    font-family: $TipografiaSecundaria;
     font-size: 12px;
     font-weight: 200px;
 }
