--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -209,13 +209,12 @@ footer li a:hover {
 
 .empresa-titulo {
   text-align: center;
-  font-family: 'Tangerine' , monospace;
+  font-family: "Tangerine", monospace;
   font-size: 45px;
-  border-top: #73726D solid 1px;
   margin-top: 35px;
   padding-top: 20px;
   padding-bottom: 25px;
-  color: #575442;
+  color: #383636;
 }
 
 .empresa-descripcion {
@@ -224,13 +223,13 @@ footer li a:hover {
 }
 
 .empresa-descripcion p {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   text-align: start;
 }
 
 .empresa-descripcion h2, .empresa-descripcion h4 {
   color: #73726D;
-  font-family: 'Tangerine' , monospace;
+  font-family: "Tangerine", monospace;
   font-size: 35px;
   margin-top: 15px;
 }
@@ -283,6 +282,13 @@ footer li a:hover {
   width: 218px;
 }
 
+.form-newsletter .btn {
+  color: #FFFDF1;
+  background-color: #73726D;
+  border-radius: 10px solid 10px #73726D;
+  margin: 15px 0px 15px 0px;
+}
+
 .form--newsletter {
   width: 200px;
 }
@@ -293,8 +299,7 @@ footer li a:hover {
 
 .looks h4 {
   text-align: center;
-  font-family: 'Tangerine' , monospace;
-  font-size: 35px;
+  font-family: "Roboto Condensed", sans-serif;
   margin: 0px 0px 80px 0px;
 }
 
@@ -302,7 +307,7 @@ footer li a:hover {
   text-align: center;
   margin-top: 30px;
   font-size: 50px;
-  font-family: 'Bona Nova', serif;
+  font-family: "Roboto Condensed", sans-serif;
   color: #73726D;
   border-top: #73726D solid 1px;
   padding-top: 100px;
@@ -310,8 +315,8 @@ footer li a:hover {
 
 .page-sec-titulo h3 {
   text-align: center;
-  font-size: 30px;
-  font-family: 'Bona Nova', serif;
+  font-size: 50px;
+  font-family: "Tangerine", monospace;
   padding-top: 10px;
   padding-bottom: 50px;
 }
@@ -331,9 +336,11 @@ footer li a:hover {
 
 #palermo h3, #unicenter h3 {
   text-align: center;
-  font-size: 30px;
-  font-family: 'Bona Nova', serif;
+  font-size: 60px;
+  font-weight: 900;
+  font-family: "Tangerine", monospace;
   padding-top: 50px;
+  text-shadow: 4px 3px 5px rgba(0, 0, 0, 0.305);
 }
 
 .bloque-tiendas {
@@ -351,12 +358,12 @@ footer li a:hover {
 }
 
 .card-title {
-  font-family: 'source code pro' , 'Tangerine' , monospace;
+  font-family: "Roboto Condensed", sans-serif;
   font-weight: 900px;
 }
 
 .card-text {
-  font-family: 'source code pro' , 'Tangerine' , monospace;
+  font-family: "Roboto Condensed", sans-serif;
   font-size: 12px;
   font-weight: 200px;
 }
