--- a/Assets/scss/_contenido-historia.scss
+++ b/Assets/scss/_contenido-historia.scss
@@ -1,23 +1,22 @@
 .empresa-titulo{
     text-align: center;
-    font-family:  'Tangerine' , monospace;
+    font-family:  $TipografiaTerciaria;
     font-size: 45px;
-    border-top: #73726D solid 1px;
     margin-top: 35px;
     padding-top: 20px;
     padding-bottom: 25px;
-    color: rgb(87, 84, 66);
+    color: $ColorTextos;
 }
 .empresa-descripcion{
     width: 80%;
     margin: auto;
     p{
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-family: $TipografiaSecundaria;
         text-align:start;
     }
     h2, h4{
-        color: #73726D;
-        font-family:  'Tangerine' , monospace;
+        color: $ColorSecundario;
+        font-family: $TipografiaTerciaria;
         font-size: 35px;
         margin-top: 15px;
     }
