--- a/Assets/scss/_contenido-lookbook.scss
+++ b/Assets/scss/_contenido-lookbook.scss
@@ -1,8 +1,7 @@
 
 .looks h4{
     text-align: center;
-    font-family:  'Tangerine' , monospace;
-    font-size: 35px;
+    font-family:$TipografiaSecundaria;
     margin: 0px 0px 80px 0px;
 }
 
@@ -11,15 +10,15 @@
         text-align: center;
         margin-top: 30px;
         font-size: 50px;
-        font-family: 'Bona Nova', serif;
+        font-family:$TipografiaSecundaria;
         color: #73726D;
         border-top: #73726D solid 1px;
         padding-top: 100px;
     }
     h3{
         text-align: center;
-        font-size: 30px;
-        font-family: 'Bona Nova', serif;
+        font-size: 50px;
+        font-family:  $TipografiaTerciaria;
         padding-top: 10px;
         padding-bottom: 50px;
     }
