--- a/Assets/scss/_contenido-tiendas.scss
+++ b/Assets/scss/_contenido-tiendas.scss
@@ -1,8 +1,10 @@
 #palermo h3, #unicenter h3{
     text-align: center;
-    font-size: 30px;
-    font-family: 'Bona Nova', serif;
+    font-size: 60px;
+    font-weight: 900;
+    font-family: $TipografiaTerciaria;
     padding-top: 50px;
+    text-shadow: 4px 3px 5px rgba(0, 0, 0, 0.305);
 }
 
 .bloque-tiendas{
