--- a/Assets/scss/_contenido-shoes.scss
+++ b/Assets/scss/_contenido-shoes.scss
@@ -8,8 +8,7 @@
     font-weight: 200px;
 }
 .card-body{
-    background-color: white;
-}
-.body-shoes{
-    background-color: white;
+    background-color: $ColorPrimario;
+    border-radius: 15px;
+    margin: 10px;
 }
