--- a/Assets/scss/_contenido-home.scss
+++ b/Assets/scss/_contenido-home.scss
@@ -23,7 +23,7 @@ aside h5{
 .foto-prod-home{
     transition: transform .9s; 
     border-radius: 15px;
-    box-shadow:#73726D 5px 5px  15px 1px;
+    box-shadow:$ColorSecundario 5px 5px  15px 1px;
 }
 
 .foto-prod-home:hover{
