--- a/Assets/scss/_contenido-home.scss
+++ b/Assets/scss/_contenido-home.scss
@@ -6,15 +6,15 @@
     text-shadow: white 1px 2px 5px;
 }
 aside h5{
-    color:$ColorTextos;
-    margin-top: 50px;
+    color: map-get($txt-home-tarj , color-fuente);
+    margin-top: map-get($txt-home-tarj , margen-arriba );
     font-family: $TipografiaPrimaria ;
     font-weight: 700;
     text-shadow: #5e5e5e 5px 1px 20px;
 }
 .descripcion{
-    color:rgb(56, 54, 54);
-    margin-top: 30px;
+    color: map-get($txt-home-tarj , color-fuente);
+    margin-top: map-get($txt-home-tarj , margen-arriba );
     font-family:$TipografiaSecundaria;
     font-size: 16px;
     font-weight: 500;
