--- a/Assets/scss/_variables.scss
+++ b/Assets/scss/_variables.scss
@@ -1,8 +1,13 @@
 $ColorPrimario: #FFFDF1;
 $ColorTextos: rgb(56, 54, 54);
 $ColorSecundario: #73726D;
-$ColorNav: #F8F9FA;
+$ColorNav: #eef2f6;
 
 $TipografiaPrimaria: 'Source Code Pro', monospace; 
 $TipografiaSecundaria: 'Roboto Condensed', sans-serif;
 $TipografiaTerciaria: 'Tangerine', monospace; 
+
+$txt-home-tarj: (
+    color-fuente :$ColorTextos,
+    margen-arriba: 30px,
+)
