--- a/Assets/scss/_contenido-lookbook.scss
+++ b/Assets/scss/_contenido-lookbook.scss
@@ -1,4 +1,9 @@
 
+@mixin textos-lookbook {
+    font-size: 50px;
+    text-align: center;
+  }
+
 .looks h4{
     text-align: center;
     font-family:$TipografiaSecundaria;
@@ -7,17 +12,15 @@
 
 .page-sec-titulo{
     h1{
-        text-align: center;
         margin-top: 30px;
-        font-size: 50px;
+        @include textos-lookbook;
         font-family:$TipografiaSecundaria;
         color: $ColorSecundario;
         border-top: $ColorSecundario solid 1px;
         padding-top: 100px;
     }
     h3{
-        text-align: center;
-        font-size: 50px;
+        @include textos-lookbook;
         font-family:  $TipografiaTerciaria;
         padding-top: 10px;
         padding-bottom: 50px;
@@ -34,3 +37,5 @@
     display: flex;
     align-content: center;
 }
+
+
