--- a/Assets/scss/_contenido-shoes.scss
+++ b/Assets/scss/_contenido-shoes.scss
@@ -37,3 +37,12 @@
     margin-bottom: 30px;
     margin-top: 30px ;
 }
+
+@media (max-width: 575px){
+    .Titulo-shoes{
+        margin-top: 15px;
+        text-align: center;
+        font-family: $TipografiaTerciaria;
+        font-size: 50px;
+    }
+}
