--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -52,7 +52,7 @@ nav ul li a:hover {
 
 .navbar-collapse {
   z-index: 10;
-  background-color: #eef2f6;
+  background-color: #F9F9F9;
   text-align: center;
   font-weight: 900;
 }
@@ -99,16 +99,17 @@ nav ul li a:hover {
 #buzos, #sweaters, #camperas {
   color: #73726D;
   margin-top: 40px;
+  color: #73726D;
   font-family: "Source Code Pro", monospace;
-  font-weight: 900;
-  text-shadow: white 1px 2px 5px;
+  font-weight: 300;
+  text-shadow: -1px -5px 5px rgba(0, 0, 0, 0.28);
 }
 
 aside h5 {
   color: #383636;
   margin-top: 30px;
   font-family: "Source Code Pro", monospace;
-  font-weight: 700;
+  font-weight: 500;
   text-shadow: #5e5e5e 5px 1px 20px;
 }
 
@@ -125,7 +126,7 @@ aside h5 {
   transition: -webkit-transform .9s;
   transition: transform .9s;
   transition: transform .9s, -webkit-transform .9s;
-  border-radius: 15px;
+  border-radius: 10px;
   -webkit-box-shadow: #73726D 5px 5px 15px 1px;
           box-shadow: #73726D 5px 5px 15px 1px;
 }
@@ -144,10 +145,18 @@ aside h5 {
 @media (max-width: 575px) {
   #buzos, #sweaters, #camperas {
     margin-top: 0px;
-    font-size: 19px;
+    font-size: 39px;
     color: #73726D;
     font-family: "Source Code Pro", monospace;
-    font-weight: 900;
+    font-weight: 200;
+    text-shadow: -1px -5px 5px rgba(0, 0, 0, 0.28);
+  }
+  aside h5 {
+    color: #383636;
+    margin-top: 30px;
+    font-family: "Source Code Pro", monospace;
+    font-weight: 500;
+    text-shadow: -1px -5px 5px rgba(0, 0, 0, 0.28);
   }
   #carousel-desk {
     display: none;
@@ -371,9 +380,9 @@ footer li a:hover {
   margin-top: 30px;
   font-size: 50px;
   text-align: center;
-  font-family: "Roboto Condensed", sans-serif;
-  color: #73726D;
-  border-top: #73726D solid 1px;
+  font-family: "Source Code Pro", monospace;
+  font-weight: 200;
+  color: #383636;
   padding-top: 100px;
 }
 
@@ -398,6 +407,48 @@ footer li a:hover {
       align-content: center;
 }
 
+@media (max-width: 575px) {
+  .page-sec-titulo h1 {
+    margin-top: 0px;
+    font-size: 50px;
+    text-align: center;
+    font-family: "Roboto Condensed", sans-serif;
+    color: #73726D;
+    padding-top: 0px;
+  }
+  .page-sec-titulo h3 {
+    font-size: 50px;
+    text-align: center;
+    font-family: "Tangerine", monospace;
+    padding-top: 10px;
+    padding-bottom: 0px;
+  }
+  .looks img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    margin-left: 5px;
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-line-pack: center;
+        align-content: center;
+  }
+  .textos-lookbook {
+    font-size: 10px;
+    font-weight: 100;
+    text-align: center;
+  }
+  .looks h4 {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 100;
+    font-family: "Roboto Condensed", sans-serif;
+    margin: 0px 0px 20px 0px;
+  }
+}
+
 #palermo h3, #unicenter h3 {
   text-align: center;
   font-size: 60px;
@@ -419,6 +470,15 @@ footer li a:hover {
   height: 400px;
   width: 33.3%;
   margin: 0px 5px;
+}
+
+@media (max-width: 575px) {
+  .Titulo-shoes {
+    margin-top: 15px;
+    text-align: center;
+    font-family: "Tangerine", monospace;
+    font-size: 50px;
+  }
 }
 
 .card-title, .card-text {
@@ -463,5 +523,14 @@ footer li a:hover {
 .card {
   margin-bottom: 30px;
   margin-top: 30px;
+}
+
+@media (max-width: 575px) {
+  .Titulo-shoes {
+    margin-top: 15px;
+    text-align: center;
+    font-family: "Tangerine", monospace;
+    font-size: 50px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
