--- a/Assets/scss/_contenido-lookbook.scss
+++ b/Assets/scss/_contenido-lookbook.scss
@@ -14,9 +14,9 @@
     h1{
         margin-top: 30px;
         @include textos-lookbook;
-        font-family:$TipografiaSecundaria;
-        color: $ColorSecundario;
-        border-top: $ColorSecundario solid 1px;
+        font-family:$TipografiaPrimaria;
+        font-weight: 200;
+        color: $ColorTextos;
         padding-top: 100px;
     }
     h3{
@@ -38,4 +38,44 @@
     align-content: center;
 }
 
+@media (max-width: 575px){
+    .page-sec-titulo{
+        h1{
+            margin-top: 0px;
+            @include textos-lookbook;
+            font-family:$TipografiaSecundaria;
+            color: $ColorSecundario;
+            padding-top: 0px;
+        }
+        h3{
+            @include textos-lookbook;
+            font-family:  $TipografiaTerciaria;
+            padding-top: 10px;
+            padding-bottom: 0px;
+        }
+    
+    }
+    .looks img{
+        width: 100%;
+        height: 100%;
+        border-radius: 5px;
+        margin-left: 5px;
+        padding: 0;
+        display: flex;
+        align-content: center;
+    }
+    .textos-lookbook {
+        font-size: 10px;
+        font-weight: 100;
+        text-align: center;
+      }
+    
+    .looks h4{
+        text-align: center;
+        font-size: 20px;
+        font-weight: 100;
+        font-family:$TipografiaSecundaria;
+        margin: 0px 0px 20px 0px;
+    }
+}
 
