--- a/Assets/scss/_nav.scss
+++ b/Assets/scss/_nav.scss
@@ -35,7 +35,7 @@ nav{
 }
 .navbar-collapse{
     z-index: 10;
-    background-color: $ColorNav;
+    background-color: #F9F9F9;
     text-align:center;
     font-weight:900;
     a{
