Ajustes Finales y pruebas - 1

--- a/Assets/scss/_contenido-shoes.scss
+++ b/Assets/scss/_contenido-shoes.scss
@@ -22,7 +22,7 @@
     font-weight: 200px;
 }
 .card-body{
-    background-color: white;
+    background-color: #F3F3F3;
     border-radius: 15px;
     margin: 10px;
     box-shadow: -2px 0.5px 18px -4px rgba(0,0,0,0.83); 
