--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -220,7 +220,7 @@ footer li a:hover {
 }
 
 .newsletter form {
-  margin-left: 28%;
+  margin-left: 10%;
   margin-top: 25px;
 }
 
@@ -407,6 +407,57 @@ footer li a:hover {
       align-content: center;
 }
 
+.scroller {
+  max-width: 575px;
+  padding: 10px;
+  display: -ms-grid;
+  display: grid;
+  grid-auto-flow: column;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
+  overflow-x: auto;
+}
+
+.scroller::-webkit-scrollbar {
+  display: none;
+}
+
+.scroller-item {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  border: 0.5px solid #73726D;
+  border-radius: 50%;
+}
+
+.scroller-item img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+}
+
+.scroller-item::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: calc(100%+15px);
+  height: calc(100%+15px);
+  background-image: linear-gradient(45deg, #dc2743 58%, #6902be 75%, #bc1888 100%);
+  border-radius: inherit;
+  z-index: 1;
+}
+
+@media (min-width: 575px) {
+  #ScrollerLookbook {
+    display: none;
+  }
+}
+
 @media (max-width: 575px) {
   .page-sec-titulo h1 {
     margin-top: 0px;
@@ -506,7 +557,7 @@ footer li a:hover {
 }
 
 .card-body {
-  background-color: white;
+  background-color: #F3F3F3;
   border-radius: 15px;
   margin: 10px;
   -webkit-box-shadow: -2px 0.5px 18px -4px rgba(0, 0, 0, 0.83);
