--- a/Assets/scss/_contenido-lookbook.scss
+++ b/Assets/scss/_contenido-lookbook.scss
@@ -38,6 +38,54 @@
     align-content: center;
 }
 
+.scroller{
+    max-width:575px;
+    padding:10px;
+    display:grid;
+    grid-auto-flow:column;
+    column-gap:1rem;
+    overflow-x:auto;
+}
+.scroller::-webkit-scrollbar{
+    display:none;
+}
+.scroller-item{
+    position:relative;
+    width:100px;
+    height:100px;
+    border:0.5px solid $ColorSecundario;
+    border-radius:50%;
+}
+.scroller-item img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    border-radius:50%;
+}
+
+.scroller-item::before{
+    content:"";
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    width:calc(100%+15px);
+    height:calc(100%+15px);
+    background-image:
+    linear-gradient(45deg,
+       #dc2743 58%,#6902be 75%,
+       #bc1888 100%);
+   border-radius:inherit;
+   z-index:1;
+}
+
+
+@media (min-width: 575px){
+    #ScrollerLookbook{
+        display: none;
+}
+}
+
 @media (max-width: 575px){
     .page-sec-titulo{
         h1{
@@ -77,5 +125,7 @@
         font-family:$TipografiaSecundaria;
         margin: 0px 0px 20px 0px;
     }
+
 }
+
 
