--- a/Assets/scss/_footer.scss
+++ b/Assets/scss/_footer.scss
@@ -90,3 +90,12 @@ footer{
         font-weight: 700;
     }
 }
+
+@media (max-width: 575px){
+    .newsletter{
+        form{
+            margin-left: 0px;
+            margin-top: 25px;
+        }
+    }
+}
