--- a/Assets/scss/_contenido-lookbook.scss
+++ b/Assets/scss/_contenido-lookbook.scss
@@ -82,8 +82,7 @@
 
 @media (min-width: 575px){
     #ScrollerLookbook{
-        display: none;
-}
+        display: none;}
 }
 
 @media (max-width: 575px){
